--- a/src/stylesheets/components/_components-global.scss
+++ b/src/stylesheets/components/_components-global.scss
@@ -2,22 +2,19 @@
 /// @group components
 ////
 
-/// Container
+/// Container placeholder.
 /// @since 0.1.0
 %container {
   margin: auto;
-  max-width: 1170px;
+  max-width: rem(1170px);
   width: 96%;
 }
 
-/// Container. Used as a wrapper around sections within a page.
-/// Modifiers:
-///   - --narrow - Narrower version of the container
-///   - --full - Full width rather than maximum width
-///   - --panel - Adds a background colour
+/// Container, used as a wrapper around sections within a page.
+/// Usually used to house grids.
 ///
 /// @example
-///   <div class="container container--panel container--full">
+///   <div class="container">
 ///     <div class="grid">
 ///     </div>
 ///   </div>
@@ -25,24 +22,8 @@
 .container {
   @extend %container;
 
-  &--narrow {
-    max-width: 1000px;
-  }
-
   &--full {
     max-width: 100%;
-    padding: 0 2%;
-    width: auto;
-  }
-
-  &--panel {
-    background: $colour-panel-default;
-    padding: 0 2%;
-    width: auto;
-  }
-
-  &--panel-inverse {
-    background: $colour-panel-inverse;
     padding: 0 2%;
     width: auto;
   }
@@ -51,7 +32,6 @@
 img {
   max-width: 100%;
 }
-
 
 hr {
   background: 0;
