--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -14,7 +14,7 @@
 	<meta property="og:description" content="{{ page.description | default: description }}">
 	<meta name="theme-color" content="#004650">
 
-	<title>{{ title }} | NICE Experience</title>
+	<title>{{ title }} | NICE Design System</title>
 
 	<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 
