Rename to Design System

--- a/server/views/layouts/_layout.njk
+++ b/server/views/layouts/_layout.njk
@@ -6,12 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="description" content="{{ title }}">
 
-	<title>{{ title }} | NICE Experience</title>
+	<title>{{ title }} | NICE Design System</title>
 
 	<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 
 	<link rel="shortcut icon" href="/favicon.ico" />
-	<link rel="stylesheet" href="/stylesheets/experience.css" type="text/css" charset="utf-8">
+	<link rel="stylesheet" href="/stylesheets/nice.css" type="text/css" charset="utf-8">
 	<link href="//fonts.googleapis.com/css?family=Lato:200normal,200italic,300normal,300italic,400normal,400italic,700normal,700italic,900normal,900italic" rel="stylesheet" type="text/css">
 
 	<!--[if lt IE 9]>
@@ -29,14 +29,14 @@
 
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!--[if !IE]><!-->
-		<script src="/javascripts/experience.dev.js"></script>
+		<script src="/javascripts/nice.dev.js"></script>
 	<!--<![endif]-->
 	<!--[if IE]>
-		<script src="/javascripts/experience.oldie.dev.js"></script>
+		<script src="/javascripts/nice.oldie.dev.js"></script>
 	<![endif]-->
 	<script>
 		$(document).ready(function() {
-			$(document).experience();
+			$(document).nice();
 		});
 	</script>
 </body>
