Add TopHat to dev site layout

--- a/server/views/layouts/_layout.njk
+++ b/server/views/layouts/_layout.njk
@@ -27,6 +27,15 @@
 		{% endblock %}
 	</div>
 
+	<script src="//cdn.nice.org.uk/V3.1/Scripts/nice/NICE.TopHat.min.js"
+            data-environment="Live"
+            data-search="/search?q=%term"
+            data-typeaheadtype="remote"
+            data-typeaheadsource="/autocomplete?%query"
+            data-search-placeholder="Search NICE..."
+            data-cookie="true"
+            async></script>
+
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!--[if !IE]><!-->
 		<script src="/javascripts/nice.dev.js"></script>
