--- a/server/views/index.njk
+++ b/server/views/index.njk
@@ -3,19 +3,50 @@
 
 {% block body %}
 
-	<ul>
-		<li><a href="/components/breadcrumbs/">Breadcrumbs</a></li>
-		<li><a href="/components/buttons/">Buttons</a></li>
-		<li><a href="/components/footer/">Footer</a></li>
-		<li><a href="/components/grid/">Grid</a></li>
-		<li><a href="/components/hero/">Hero</a></li>
-		<li><a href="/components/in-page-nav/">In page nav</a></li>
-		<li><a href="/components/lists/">Lists</a></li>
-		<li><a href="/components/panels/">Panels</a></li>
-		<li><a href="/components/phase/">Phase banners</a></li>
-		<li><a href="/components/quote/">Quote</a></li>
-		<li><a href="/components/tabs/">Tabs</a></li>
-		<li><a href="/components/typography/">Typography</a></li>
-	</ul>
+	<div class="container">
+
+		<div class="grid">
+
+			<div data-g="12 md:4">
+				<h2>Components</h2>
+
+				<ul>
+					<li><a href="/components/breadcrumbs/">Breadcrumbs</a></li>
+					<li><a href="/components/buttons/">Buttons</a></li>
+					<li><a href="/components/footer/">Footer</a></li>
+					<li><a href="/components/grid/">Grid</a></li>
+					<li><a href="/components/hero/">Hero</a></li>
+					<li><a href="/components/in-page-nav/">In page nav</a></li>
+					<li><a href="/components/lists/">Lists</a></li>
+					<li><a href="/components/panels/">Panels</a></li>
+					<li><a href="/components/phase/">Phase banners</a></li>
+					<li><a href="/components/quote/">Quote</a></li>
+					<li><a href="/components/tabs/">Tabs</a></li>
+					<li><a href="/components/typography/">Typography</a></li>
+				</ul>
+			</div>
+
+			<div data-g="12 md:4">
+				<h2>Utilities</h2>
+
+				<ul>
+					<li><a href="/utilities/visibility/">Visibility</a></li>
+				</ul>
+			</div>
+
+			<div data-g="12 md:4">
+				<h2>Pages</h2>
+
+				<ul>
+					<li><a href="/pages/stakeholder-registration/">Stakeholder registration</a></li>
+				</ul>
+			</div>
+
+		</div>
+
+	</div>
+
+
+
 
 {% endblock %}
