Add open graph image tag

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -12,6 +12,7 @@
 	<meta property="og:title" content="{{ title }}">
 	<meta property="og:type" content="{{ type }}">
 	<meta property="og:description" content="{{ page.description | default: description }}">
+	<meta property="og:image" content="{{ site.baseurl }}/images/nice-logo-256.png">
 	<meta name="theme-color" content="#004650">
 
 	<title>{{ title }} | NICE Design System</title>
