Move icons to use the NICE Icons project

--- a/server/views/index.njk
+++ b/server/views/index.njk
@@ -27,6 +27,13 @@
 			</div>
 
 			<div data-g="12 md:4">
+
+				<h2>Foundations</h2>
+
+				<ul>
+					<li><a href="/foundations/icons/">Icons</a></li>
+				</ul>
+
 				<h2>Utilities</h2>
 
 				<ul>
