--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -20,5 +20,8 @@
 // Typography
 @import 'typography/typography';
 
+// Icons - from nice-icons module
+@import 'nice-icons';
+
 // Components
 @import '../components/components';
