Update copyright message

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -97,8 +97,7 @@
 		</div>
 
 		<p class="site-footer__copyright">
-			Copyright &copy; {{ site.time | date: '%Y' }} National Institute for Health and Care Excellence. All rights reserved.
-			&ndash; <a href="http://www.nice.org.uk" rel="noopener external provider">Provided by NICE</a>
+			&copy; NICE {{ site.time | date: '%Y' }}. All rights reserved. Subject to <a href="https://www.nice.org.uk/terms-and-conditions#notice-of-rights">Notice of rights</a>.
 		</p>
 
 	</div>
