Add stacked nav

--- a/src/components/_components.scss
+++ b/src/components/_components.scss
@@ -4,7 +4,7 @@
 'footer/footer',
 'hero/hero',
 'in-page-nav/in-page-nav',
-'left-nav/left-nav',
+'stacked-nav/stacked-nav',
 'maintain-ratio/maintain-ratio',
 'panel/panel',
 'phase-banner/phase-banner',
