--- a/server/views/index.njk
+++ b/server/views/index.njk
@@ -17,11 +17,11 @@
 					<li><a href="/components/grid/">Grid</a></li>
 					<li><a href="/components/hero/">Hero</a></li>
 					<li><a href="/components/in-page-nav/">In page nav</a></li>
-					<li><a href="/components/left-nav/">Left nav</a></li>
 					<li><a href="/components/lists/">Lists</a></li>
 					<li><a href="/components/panels/">Panels</a></li>
 					<li><a href="/components/phase/">Phase banners</a></li>
 					<li><a href="/components/quote/">Quote</a></li>
+					<li><a href="/components/stacked-nav/">Stacked nav</a></li>
 					<li><a href="/components/tabs/">Tabs</a></li>
 					<li><a href="/components/typography/">Typography</a></li>
 				</ul>
