--- a/src/components/stacked-nav/_stacked-nav.scss
+++ b/src/components/stacked-nav/_stacked-nav.scss
@@ -2,10 +2,10 @@
 /// @group components
 ////
 
-/// Left nav component.
+/// Stacked navigation component.
 /// Expands to fill the available space.
 /// Usually full width on mobile and 1/3 on wider screens.
-.left-nav {
+.stacked-nav {
   background: #fafafa;
   border: 1px solid $colour-border;
 
@@ -44,7 +44,7 @@
 
   // The title nav link
   &__root {
-    @include font-size(h5);
+    @include font-size(h6);
     border-bottom: 1px solid $colour-border;
     font-weight: bold;
     margin: 0;
