--- a/css/app.scss
+++ b/css/app.scss
@@ -9,7 +9,7 @@
 $nice-font-base-path: '/nice-design-system/fonts/';
 
 // Experience
-@import 'index';
+@import 'nice-design-system';
 
 // Vendor
 @import 'vendor/syntax';
