--- a/_sass/components/_components-layout.scss
+++ b/_sass/components/_components-layout.scss
@@ -7,6 +7,7 @@
 
   &__sidebar {
     @include grid-item($loose: true);
+    margin-bottom: em($spacing-large);
 
     @media print {
       display: none;
