Fix issue with buttons/links focus ring on inverse bg
By default buttons/links have a teal focus ring. But we have the
ability to use an inverse (dark) background. In this instance,
the focus ring should be white to maintain a high contrast between
focus ring and background

--- a/server/views/layouts/_layout.njk
+++ b/server/views/layouts/_layout.njk
@@ -27,12 +27,8 @@
 		{% endblock %}
 	</div>
 
-	<script src="//cdn.nice.org.uk/V3.1/Scripts/nice/NICE.TopHat.min.js"
+	<script src="//cdn.nice.org.uk/V3.1/Scripts/nice/NICE.TopHat.dev.js"
             data-environment="Live"
-            data-search="/search?q=%term"
-            data-typeaheadtype="remote"
-            data-typeaheadsource="/autocomplete?%query"
-            data-search-placeholder="Search NICE..."
             data-cookie="true"
             async></script>
 
