--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -5,7 +5,7 @@
 /// Site footer
 /// @since 0.1.0
 .site-footer {
-  @extend %inverse-links;
+  @include links-inverse;
   @include font-size(-1);
   background: $colour-panel-inverse;
   color: $colour-text-inverse;
