--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -67,7 +67,7 @@
 
   // The button/link for the tab itself
   &__tab-btn {
-    @extend %link;
+    @include link-default;
     background: 0;
     border: 0;
     border-left: 1px solid transparent;
