--- a/server/views/layouts/_layout.njk
+++ b/server/views/layouts/_layout.njk
@@ -16,6 +16,7 @@
 
 	<!--[if lt IE 9]>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    	<script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-shim.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
 </head>
@@ -33,12 +34,7 @@
             async></script>
 
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<!--[if !IE]><!-->
-		<script src="/javascripts/nice.dev.js"></script>
-	<!--<![endif]-->
-	<!--[if IE]>
-		<script src="/javascripts/nice.oldie.dev.js"></script>
-	<![endif]-->
+	<script src="/javascripts/nice.dev.js"></script>
 	<script>
 		$(document).ready(function() {
 			$(document).nice();
