--- a/src/stylesheets/settings/_settings-colours-semantic.scss
+++ b/src/stylesheets/settings/_settings-colours-semantic.scss
@@ -138,17 +138,17 @@ $colour-btn-secondary-text: $colour-nice-white;
 
 // LIGHT BUTTONS
 
-/// Light button background colour
+/// Inverse (light) button background colour
 /// @since 0.2.2
-$colour-btn-light: $colour-nice-white;
+$colour-btn-inverse: $colour-nice-white;
 
-/// Light button hover colour
+/// Inverse (light) button hover colour
 /// @since 0.2.2
-$colour-btn-light-hover: $colour-nice-grey-3;
+$colour-btn-inverse-hover: $colour-nice-grey-3;
 
-/// Light button text colour
+/// Inverse (light) button text colour
 /// @since 0.2.2
-$colour-btn-light-text: $colour-nice-rich-black;
+$colour-btn-inverse-text: $colour-nice-rich-black;
 
 
 // BACKGROUNDS/BORDERS
