--- a/server/views/components/panels.njk
+++ b/server/views/components/panels.njk
@@ -22,7 +22,7 @@
 				Some <a href="#">text</a> content
 			</p>
 			<p>
-				<a href="#" class="btn btn--light">A light button</a>
+				<a href="#" class="btn btn--inverse">An inverse button</a>
 			</p>
 		</div>
 
