Add loose list example page

--- a/server/views/components/lists.njk
+++ b/server/views/components/lists.njk
@@ -50,6 +50,13 @@
 			<li>Top level</li>
 		</ol>
 
+		<h2>Loose list</h2>
+
+		<ul class="list list--loose">
+			<li>List item</li>
+			<li>List item</li>
+		</ul>
+
 		<h2>Unstyled list</h2>
 
 		<ul class="list list--unstyled">
