Rename light button to inverse

--- a/src/stylesheets/settings/_settings-colours-semantic.scss
+++ b/src/stylesheets/settings/_settings-colours-semantic.scss
@@ -136,19 +136,19 @@ $colour-btn-secondary-hover: #333;
 $colour-btn-secondary-text: $colour-nice-white;
 
 
-// LIGHT BUTTONS
+// INVERSE BUTTONS
 
-/// Light button background colour
+/// Inverse button background colour
 /// @since 0.2.2
-$colour-btn-light: $colour-nice-white;
+$colour-btn-inverse: $colour-nice-white;
 
-/// Light button hover colour
+/// Inverse button hover colour
 /// @since 0.2.2
-$colour-btn-light-hover: $colour-nice-grey-3;
+$colour-btn-inverse-hover: $colour-nice-grey-3;
 
-/// Light button text colour
+/// Inverse button text colour
 /// @since 0.2.2
-$colour-btn-light-text: $colour-nice-rich-black;
+$colour-btn-inverse-text: $colour-nice-rich-black;
 
 
 // BACKGROUNDS/BORDERS
