Add card & tag components

--- a/server/views/components/phase.njk
+++ b/server/views/components/phase.njk
@@ -9,7 +9,7 @@
 
 		<p class="phase-banner">
 			<span class="phase-banner__tag">
-				<strong class="phase-tag phase-tag--alpha">ALPHA</strong>
+				<strong class="tag tag--impact tag--alpha">ALPHA</strong>
 			</span>
 			<span class="phase-banner__label">
 				This site is in development. This means there it isn't feature complete and there will be issues. Find any? Please, <a href="#">let us know</a>!
