--- a/server/views/index.njk
+++ b/server/views/index.njk
@@ -13,6 +13,8 @@
 				<ul>
 					<li><a href="/components/breadcrumbs/">Breadcrumbs</a></li>
 					<li><a href="/components/buttons/">Buttons</a></li>
+					<li><a href="/components/card/">Card</a></li>
+					<li><a href="/components/cta-bar/">CTA bar</a></li>
 					<li><a href="/components/footer/">Footer</a></li>
 					<li><a href="/components/grid/">Grid</a></li>
 					<li><a href="/components/hero/">Hero</a></li>
@@ -22,6 +24,7 @@
 					<li><a href="/components/phase/">Phase banners</a></li>
 					<li><a href="/components/quote/">Quote</a></li>
 					<li><a href="/components/stacked-nav/">Stacked nav</a></li>
+					<li><a href="/components/tag/">Tag</a></li>
 					<li><a href="/components/tabs/">Tabs</a></li>
 					<li><a href="/components/typography/">Typography</a></li>
 				</ul>
@@ -47,6 +50,7 @@
 
 				<ul>
 					<li><a href="/pages/stakeholder-registration/">Stakeholder registration</a></li>
+					<li><a href="/pages/topic-landing-page/">Topic landing page</a></li>
 				</ul>
 			</div>
 
