--- a/src/components/_components.scss
+++ b/src/components/_components.scss
@@ -1,6 +1,8 @@
 @import 'breadcrumbs/breadcrumbs',
 'buttons/buttons',
+'card/card',
 'container/container',
+'cta-bar/cta-bar',
 'footer/footer',
 'hero/hero',
 'in-page-nav/in-page-nav',
@@ -9,4 +11,5 @@
 'panel/panel',
 'phase-banner/phase-banner',
 'table/table',
-'tabs/tabs';
+'tabs/tabs',
+'tag/tag';
