Use lighter body copy
To reduce contrast with background

--- a/src/stylesheets/settings/_settings-colours-semantic.scss
+++ b/src/stylesheets/settings/_settings-colours-semantic.scss
@@ -19,7 +19,7 @@ $colour-body: #fafafa;
 
 /// Standard, primary body text colour
 /// @since 0.2.0
-$colour-text: $colour-nice-rich-black;
+$colour-text: $colour-nice-black;
 
 /// Subtle text colour
 /// @since 0.2.0
