--- a/server/views/components/tag.njk
+++ b/server/views/components/tag.njk
@@ -13,10 +13,12 @@
 			<li>Tag <span class="tag">Tag</span></li>
 			<li>New <span class="tag tag--new">New</span></li>
 			<li>Updated <span class="tag tag--updated">Updated</span></li>
+			<li>In consultation <span class="tag tag--consultation">In consultation</span></li>
 			<li>Alpha <span class="tag tag--alpha">Alpha</span></li>
 			<li>Beta <span class="tag tag--beta">Beta</span></li>
 			<li>Live <span class="tag tag--live">Live</span></li>
 			<li>Impact <span class="tag tag--impact">Impact</span></li>
+			<li>Impact alpha <span class="tag tag--impact tag--alpha">Alpha</span></li>
 		</ul>
 
 	</div>
