--- a/src/components/tag/_tag.scss
+++ b/src/components/tag/_tag.scss
@@ -2,7 +2,8 @@
 /// @group components
 ////
 
-/// A tag for labelling
+/// Tag component. Used for labelling items in lists
+/// and also used within alpha/beta phase banners.
 ///
 /// BEM modifiers:
 ///   - `--impact` Larger tag, used for impact
@@ -11,9 +12,10 @@
 ///   - `--live`  Live
 ///   - `--new`  New
 ///   - `--updated`  Updated
+///   - `--consultation`  In consultation
 /// @since 0.3.1
 .tag {
-  @include font-size(-2);
+  @include font-size(-1);
   background-color: $colour-panel-inverse;
   border-radius: em($spacing-xx-small);
   color: $colour-text-inverse;
@@ -52,10 +54,14 @@
   }
 
   &--new {
-    background: $colour-nice-purple;
+    background: $colour-guidance-new;
   }
 
   &--updated {
-    background: $colour-nice-blue-3;
+    background: $colour-guidance-updated;
+  }
+
+  &--consultation {
+    background: $colour-guidance-consultation;
   }
 }
