--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -2,13 +2,19 @@
 /// @group components
 ////
 
-/// Card
+/// Flexible card component for displaying
+/// guidance, news etc in a list. Consists
+/// of a heading, optional body copy, optional
+/// image and optional metadata.
+/// Usually used withing an unstyled list.
 /// @since 0.3.1
 .card {
   border-bottom: 1px solid $colour-border;
   padding: em($spacing-small 0);
+  position: relative;
 
-  &__header {
+  &:hover a {
+    text-decoration: underline;
   }
 
   &__heading {
@@ -18,6 +24,17 @@
 
     a {
       text-decoration: none;
+
+      &:before {
+        content: '';
+        display: block;
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: 0;
+      }
     }
   }
 
@@ -27,7 +44,7 @@
 
   &__tag {
     @include font-size(-1)
-    margin-left: em($spacing-x-small);
+    margin-right: em($spacing-x-small);
   }
 
   &__metadata {
