Rename cta bar to action banner

--- a/server/views/index.njk
+++ b/server/views/index.njk
@@ -11,10 +11,10 @@
 				<h2>Components</h2>
 
 				<ul>
+					<li><a href="/components/action-banner/">Action banner</a></li>
 					<li><a href="/components/breadcrumbs/">Breadcrumbs</a></li>
 					<li><a href="/components/buttons/">Buttons</a></li>
 					<li><a href="/components/card/">Card</a></li>
-					<li><a href="/components/cta-bar/">CTA bar</a></li>
 					<li><a href="/components/footer/">Footer</a></li>
 					<li><a href="/components/grid/">Grid</a></li>
 					<li><a href="/components/hero/">Hero</a></li>
