--- a/src/components/_components.scss
+++ b/src/components/_components.scss
@@ -1,8 +1,8 @@
-@import 'breadcrumbs/breadcrumbs',
+@import 'action-banner/action-banner',
+'breadcrumbs/breadcrumbs',
 'buttons/buttons',
 'card/card',
 'container/container',
-'cta-bar/cta-bar',
 'footer/footer',
 'hero/hero',
 'in-page-nav/in-page-nav',
